# VGTranslate3

./: .gitignore  Dockerfile  INSTALL.md  LOCAL_MODELS_GUIDE.md  OPENAI_COMPATIBLE.md  OPENAI_USAGE.md  README.md  ROUTERAI_TEST.md  TESSERACT_GUIDE.md  pyproject.toml  requirements-optional.txt  requirements.txt
config_example/: config_deepseek_gemini.json  config_google.json  config_groq_gemini.json  config_hybrid_ollama_groq.json  config_ollama_local.json  config_openai.json  config_openai_no_tts.json  config_openrouter.json  config_routerai.json  config_tess_google.json  config_tesseract_google.json  config_tesseract_rus.json  config_vllm_local.json  config_yandex.json  config_ztranslate.json
src/vgtranslate3/: __init__.py  bbox_extractor.py  config.py  imaging.py  local_ocr_providers.py  local_translation_providers.py  ocr_providers.py  ocr_texter.py  ocr_tools.py  opencv_engine.py  screen_translate.py  serve.py  server_client.py  text_to_speech.py  translation_providers.py  util.py
src/vgtranslate3/config_example/: config_gemini.json  config_google.json  config_hybrid_ollama_groq.json  config_ollama_local.json  config_openai.json  config_openrouter.json  config_routerai.json  config_vllm_local.json
src/vgtranslate3/webui/: __init__.py  server.py
src/vgtranslate3/webui/static/: app.js  index.html  style.css
tests/: test_mock_providers.py  test_providers.py  test_smoke.py
tests/benchmark/: README.md
